components/infra/contour/templates/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: contour-class
spec:
  controllerName: projectcontour.io/contour
