components/infra/contour/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: contour-gateway
  namespace: project-contour
spec:
  gatewayClassName: contour-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
